--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -44,7 +44,7 @@
         <button id="apply-filter">Filter</button>
     </div>
     <div id="products-container" class="products-grid"></div>
-    <div id="pagination-container"></div>
+    <div id="pagination-container" class="pagination"></div>
     <script src="js/injectHeader.js"></script>
     <script src="js/fetchProducts.js"></script>
 </body>
