--- a/product-details.html
+++ b/product-details.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/loader.css">
-    <link rel="stylesheet" href="css/styles.css">
-
+    <link rel="stylesheet" href="css/products.css">
     <!-- Css Styles -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -44,7 +43,70 @@
         <img src="/img/products cart.jpg" alt="">
     </section>
 
+    <div class="container">
+        <!-- <div class="item-view">
+            Image Section
+            <div class="image-section">
+                <img src="https://via.placeholder.com/600" alt="Product Image">
+            </div>
+
+            Details Section
+            <div class="item-details">
+                <h1>Product Name</h1>
+                <div class="stars">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Vivamus lacinia odio vitae vestibulum. Fusce faucibus nulla in nibh
+                    suscipit, vel blandit nulla scelerisque.
+                </p>
+                <div class="price">$199.99</div>
+                <div class="availability">Availability: <strong>In Stock</strong></div>
+                <div class="category">Category: <strong>Electronics</strong></div>
+                <div class="quantity">
+                    <label for="quantity">Quantity:</label>
+                    <input type="number" id="quantity" min="1" value="1">
+                </div>
+                <div class="actions">
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+            </div>
+        </div> -->
+        <div id="productContainer"></div>
+
+        <!-- Related Products Section -->
+        <div class="related-products">
+            <h2>Related Products</h2>
+            <div class="carousel">
+                <img src="https://via.placeholder.com/150" alt="Related Product 1">
+                <img src="https://via.placeholder.com/150" alt="Related Product 2">
+                <img src="https://via.placeholder.com/150" alt="Related Product 3">
+                <img src="https://via.placeholder.com/150" alt="Related Product 4">
+            </div>
+        </div>
+
+        <!-- Customer Reviews Section
+        <div class="reviews-section">
+            <h2>Customer Reviews</h2>
+            <div class="review">
+                <div class="author">John Doe</div>
+                <div class="rating">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
+                <p>Great product! Highly recommend to everyone.</p>
+            </div>
+            <div class="review">
+                <div class="author">Jane Smith</div>
+                <div class="rating">&#9733; &#9733; &#9733; &#9734; &#9734;</div>
+                <p>Good quality but a bit expensive.</p>
+            </div>
+            <div class="review">
+                <div class="author">Michael Brown</div>
+                <div class="rating">&#9733; &#9733; &#9733; &#9733; &#9733;</div>
+                <p>Exceeded my expectations. Would buy again!</p>
+            </div>
+        </div> -->
+    </div>
+
     <script src="js/injectHeader.js"></script>
+    <script src="js/product-details.js"></script>
 </body>
 
 </html>
