--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Css Styles -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <!-- <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css"> -->
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
