--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/style.css" type="text/css"> -->
+    <!-- Include Toastify CSS (Make sure this is before your app.js) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.10.0/toastify.css">
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@16.0.2"></script>
 
+    <!-- Include Toastify JS (Make sure this is before your app.js) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.10.0/toastify.js"></script>
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <title>Document</title>
@@ -603,7 +608,7 @@
 
     </main>
 
-    <script src="js/injectHeader.js"></script>
+    <script type="module" src="js/injectHeader.js"></script>
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- <script src="/js/script.js"></script> -->
@@ -662,6 +667,7 @@
         });
 
     </script>
+
     <script>
 
         // Initialize Swiper
@@ -697,6 +703,7 @@
 
     </script>
     <script src="/js/fetchCategories.js"></script>
+    <script type="module" src="js/user.js"></script>
 </body>
 
 </html>
