--- a/product-details.html
+++ b/product-details.html
@@ -19,7 +19,14 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/style.css" type="text/css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.10.0/toastify.css">
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@16.0.2"></script>
 
+    <!-- Include Toastify JS (Make sure this is before your app.js) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.10.0/toastify.js"></script>
+
+    <!-- Include Toastify JS (Make sure this is before your app.js) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.10.0/toastify.js"></script>
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <title>Document</title>
@@ -105,7 +112,7 @@
         </div> -->
     </div>
 
-    <script src="js/injectHeader.js"></script>
+    <script type="module" src="js/injectHeader.js"></script>
     <script src="js/product-details.js"></script>
 </body>
 
