--- a/signup.html
+++ b/signup.html
@@ -20,6 +20,10 @@
             <h2>Create an Account</h2>
             <form id="signupForm">
                 <div class="input-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                </div>
+                <div class="input-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Enter your email" required>
                 </div>
