--- a/header.html
+++ b/header.html
@@ -14,7 +14,7 @@
                     <a href="#"><i class="ri-pinterest-fill"></i></a>
                 </div>
                 <div class="custom-header-language">
-                    <img src="img/language.png" alt="">
+                    <!-- <img src="img/language.png" alt=""> -->
                     <div>English</div>
                     <span class="ri-arrow-down-s-fill"></span>
                     <ul class="custom-language-dropdown">
@@ -50,7 +50,7 @@
         <div class="custom-header-cart">
             <ul>
                 <li><a href="#"><i class="ri-heart-fill"></i> <span>1</span></a></li>
-                <li><a href="#"><i class="ri-shopping-bag-fill"></i> <span id="cart-badge">0</span></a></li>
+                <li><a href="cart.html"><i class="ri-shopping-bag-fill"></i> <span id="cart-badge">0</span></a></li>
             </ul>
             <!-- <div class="custom-cart-price">item: <span>$150.00</span></div> -->
         </div>
