--- a/cart.html
+++ b/cart.html
@@ -19,11 +19,13 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/appwrite"></script>
+    <script src="https://cdn.jsdelivr.net/npm/appwrite@16.1.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+
             background-color: #f9f9f9;
             margin: 0;
             padding: 20px;
@@ -33,17 +35,37 @@
             color: #333;
             text-align: center;
             margin-bottom: 20px;
+            margin-top: 3rem;
+        }
+
+        .cart {
+            width: 100%;
+            padding-inline: 4rem;
+            display: flex;
+            gap: 3rem;
+        }
+
+        .cart-right {
+            width: 30%;
+            background-color: #f9f9f9;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            padding: 1.5rem;
+            align-self: start;
         }
 
         #cart-items {
+            width: 70%;
             display: flex;
             flex-direction: column;
             gap: 15px;
-            max-width: 800px;
-            margin: 0 auto;
+            /* max-width: 800px; */
+            /* margin: 0 auto; */
+            background-color: #f9f9f9;
         }
 
         .cart-item {
+            width: 100%;
             display: flex;
             align-items: center;
             background-color: #fff;
@@ -99,9 +121,9 @@
 
         #total-amount {
             font-size: 1.5rem;
-            text-align: right;
-            margin: 20px 0;
+
             color: #333;
+            margin-bottom: 2rem;
         }
 
         #checkout-button {
@@ -119,6 +141,47 @@
         #checkout-button:hover {
             background-color: #e07300;
         }
+
+        /* modal */
+        .modal {
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            /* Semi-transparent background */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            width: 300px;
+        }
+
+        .modal-actions {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
+
+        .modal button {
+            padding: 10px;
+            background-color: rgba(255, 81, 0, 0.8);
+            border: none;
+            color: white;
+            cursor: pointer;
+        }
+
+        .modal button:hover {
+            opacity: 0.8;
+        }
     </style>
 </head>
 
@@ -128,138 +191,39 @@
         <span class="loader"></span>
     </div>
     <main id="gen-container">
-
-
         <div id="header-placeholder"></div>
         <h1>Cart Items</h1>
+        <div class="cart">
 
-        <div id="cart-items"></div>
-        <h3 id="total-amount">Total: $0.00</h3>
+            <div id="cart-items"></div>
 
-        <button id="checkout-button">Proceed to Checkout</button>
+            <div class="cart-right">
+                <h3>Order Summary </h3>
+                <p class="delivery">Delivery Charge: $40 </p>
+                <h3 id="total-amount">Total: $0.00</h3>
+
+                <button id="checkout-button">Proceed to Checkout</button>
+            </div>
+        </div>
+        <div id="card-element"></div>
+
+        <!-- Modal Structure -->
+        <div id="confirmation-modal" class="modal">
+            <div class="modal-content">
+                <h4>Are you sure you want to delete this item?</h4>
+                <p id="modal-item-name"></p>
+                <div class="modal-actions">
+                    <button id="confirm-delete" class="btn">Yes, delete</button>
+                    <button id="cancel-delete" class="btn">Cancel</button>
+                </div>
+            </div>
+        </div>
+
     </main>
     <script type="module" src="js/injectHeader.js"></script>
 
-    <script>
 
-        function showLoader() {
-            document.getElementById("preloder").style.display = "block";
-            document.getElementById("gen-container").style.display = "none";
-        }
-
-        function hideLoader() {
-            document.getElementById("preloder").style.display = "none";
-            document.getElementById("gen-container").style.display = "block";
-        }
-
-
-        const client = new Appwrite.Client();
-        client.setEndpoint("https://cloud.appwrite.io/v1").setProject("675da000000fd4f21140");
-
-        const account = new Appwrite.Account(client);
-        const database = new Appwrite.Databases(client);
-
-        function showToast(message, type = "success") {
-            Toastify({
-                text: message,
-                duration: 3000,
-                gravity: "top",
-                position: "right",
-                backgroundColor: type === "success" ? "green" : "red",
-            }).showToast();
-        }
-
-        async function fetchUserSession() {
-            try {
-                const session = await account.get();
-                sessionStorage.setItem("currentUser", JSON.stringify({ id: session.$id }));
-                return session.$id;
-            } catch (error) {
-                console.error(error);
-                window.location.href = "/signin";
-            }
-        }
-
-        async function fetchCartItems() {
-            showLoader(); // Show loader when request starts
-            const userId = JSON.parse(sessionStorage.getItem("currentUser"))?.id;
-
-            if (!userId) {
-                return [];
-            }
-
-            try {
-                const response = await database.listDocuments("6777b3ad001b214a23a2", "6777b3f800054b43ad72");
-                return response.documents;
-            } catch (error) {
-                console.error(error);
-                return [];
-            } finally {
-                hideLoader(); // Hide loader when request ends
-            }
-        }
-
-        async function displayCartItems() {
-            await fetchUserSession();
-            const cartItems = await fetchCartItems();
-
-            const cartContainer = document.getElementById("cart-items");
-            cartContainer.innerHTML = "";
-
-            if (cartItems.length === 0) {
-                cartContainer.innerHTML = "<p>Your cart is empty.</p>";
-                return;
-            }
-
-            let totalAmount = 0;
-
-            cartItems.forEach((item) => {
-                totalAmount += item.price * item.quantity;
-
-                const itemDiv = document.createElement("div");
-                itemDiv.className = "cart-item";
-                itemDiv.innerHTML = `
-                    <img src="${item.imageUrl}" alt="${item.productName}">
-                    <div class="cart-item-details">
-                        <h4>${item.productName}</h4>
-                        <p>Price: $${item.price}</p>
-                        <p>Quantity: ${item.quantity}</p>
-                    </div>
-                    <div class="cart-item-actions">
-                        <button data-id="${item.$id}" class="delete-item">Delete</button>
-                    </div>
-                `;
-
-                cartContainer.appendChild(itemDiv);
-            });
-
-            document.getElementById("total-amount").innerText = `Total: $${totalAmount.toFixed(2)}`;
-
-            document.querySelectorAll(".delete-item").forEach((button) => {
-                button.addEventListener("click", deleteCartItem);
-            });
-        }
-
-        async function deleteCartItem(event) {
-            const documentId = event.target.dataset.id;
-
-            try {
-                await database.deleteDocument("6777b3ad001b214a23a2", "6777b3f800054b43ad72", documentId);
-                showToast("Item deleted successfully!", "success");
-                displayCartItems();
-            } catch (error) {
-                console.error(error);
-                showToast("Failed to delete item.", "error");
-            }
-        }
-
-        document.getElementById("checkout-button").addEventListener("click", () => {
-            showToast("Proceeding to checkout...");
-        });
-
-        displayCartItems();
-    </script>
-
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
