--- a/keepsake.html
+++ b/keepsake.html
@@ -174,6 +174,254 @@
             </div>
         </div>
     </div>
+    <script>
+        document.getElementById("checkout-button").addEventListener("click", async () => {
+            // Show loader while processing
+            showLoader();
+
+            try {
+                // 1. Fetch the cart items
+                const cartItems = await fetchCartItems();
+                let totalAmount = 0;
+
+                cartItems.forEach((item) => {
+                    totalAmount += item.price * item.quantity;
+                });
+
+                // 2. Initialize Stripe
+                const stripe = Stripe("pk_test_your_publishable_key"); // Replace with your Stripe public key
+
+                // 3. Redirect to Stripe Checkout
+                const session = await fetch("https://api.stripe.com/v1/checkout/sessions", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/x-www-form-urlencoded",
+                        Authorization: `Bearer your_secret_key`, // Use your actual Stripe secret key
+                    },
+                    body: new URLSearchParams({
+                        payment_method_types: "card",
+                        line_items: JSON.stringify([
+                            {
+                                price_data: {
+                                    currency: "usd",
+                                    product_data: {
+                                        name: "Cart Total",
+                                        description: "Payment for cart items",
+                                    },
+                                    unit_amount: totalAmount * 100, // Convert to cents
+                                },
+                                quantity: 1,
+                            },
+                        ]),
+                        mode: "payment",
+                        success_url: `${window.location.origin}/success.html`,
+                        cancel_url: `${window.location.origin}/cancel.html`,
+                    }),
+                });
+
+                const sessionData = await session.json();
+
+                // Redirect to Stripe's Checkout page
+                stripe.redirectToCheckout({ sessionId: sessionData.id });
+            } catch (error) {
+                console.error("Error creating checkout session:", error);
+                showToast("Failed to create payment session", "error");
+            } finally {
+                hideLoader();
+            }
+        });
+    </script>
+    <script>document.getElementById("checkout-button").addEventListener("click", async () => {
+            showLoader();
+
+            // Define your appwrite project ID and API key as constants
+            const appwriteProjectID = "675da000000fd4f21140"; // REPLACE THIS
+            const appwriteAPIKey = "standard_0f80c6fbd66976aa80e0a7d31ea4e753427d9cbc81e70f2312745242dbc67f3812111d072d6503a9f65c159b9b30e07ac2efdc12d5a44c80ffd808250c2c1728b774616e35d03da581532ec2e38f64bf0c46701cbbeefc5185b3b7c4f3d6e6fcdb9c5132592d468d915a5387aa28630bcfd4ea06d4a7d6f579fdba4358df2d36";     //REPLACE THIS
+
+            const appwriteFunctionId = "6787a24b002f4941f2bb" // REPLACE THIS
+            console.log("appwrite function id", appwriteFunctionId);
+
+            const url = `https://cloud.appwrite.io/v1/functions/${appwriteFunctionId}/executions`
+            console.log("url", url)
+            // const userId = sessionStorage.getItem("currentUser");
+
+
+            try {
+                const cartItems = await fetchCartItems();
+                let totalAmount = 0;
+                cartItems.forEach(item => {
+                    totalAmount += item.price * item.quantity;
+                });
+                const formattedAmount = totalAmount.toFixed(2);
+
+                const formData = {
+                    totalAmount: formattedAmount,
+                    successUrl: window.location.origin + "/success",
+                    cancelUrl: window.location.origin + "/cancel",
+                }
+                console.log("form data", formData)
+                // 1. Call your Appwrite function using REST API
+                const response = await fetch(
+                    url, // Replace with your function ID
+                    {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json",
+                            "x-appwrite-project": appwriteProjectID, // Replace with your project ID
+                            // "x-appwrite-user-id": userId2,
+                            "x-appwrite-key": appwriteAPIKey, // Replace with your API key
+
+                        },
+                        body: JSON.stringify(formData),
+                    }
+                );
+                console.log("res", response)
+                const data = await response.json();
+                console.log("data", data)
+                if (!response.ok) {
+                    throw new Error(data.message || `Appwrite function failed with status: ${response.status}`);
+                }
+
+                if (data.error) {
+                    throw new Error(data.error);
+                }
+
+                // 2. Redirect to Stripe Checkout
+                // window.location.href = data.url;
+            } catch (error) {
+                console.error(error);
+                showToast("Checkout failed. Please try again.", "error");
+            } finally {
+                hideLoader();
+            }
+        });</script>
+    <script>
+        const lineItem = {
+            price_data: {
+                unit_amount: 1000, // $10.00
+                currency: 'usd',
+                product_data: {
+                    name: 'Product',
+                },
+                unit_amount: totalAmount * 100, // Stripe expects amount in cents
+                currency: 'usd',
+                product_data: {
+                    name: productName, // Dynamically use product name
+                },
+            },
+            quantity: 1,
+        };
+    </script>
+    <script>
+        // Getting the id of each product from the url
+        const urlParams = new URLSearchParams(window.location.search);
+        const productId = urlParams.get("id");
+        console.log("product id", productId);
+
+        // fetch the product detail from the api
+
+        async function fetchProduct(productId) {
+            try {
+                const response = await fetch(`https://dummyjson.com/products/${productId}`);
+                if (!response.ok) throw new Error("Failed to fetch product detail");
+                const product = await response.json();
+                console.log(product)
+                renderProduct(product);
+            } catch (err) {
+                console.log(err);
+            }
+        }
+        fetchProduct(8);
+        //  Render product detail into html
+        function renderProduct(product) {
+            const container = document.getElementById("productContainer");
+
+            container.innerHTML = `
+    <div class="item-view">
+    <!--Image Section -->
+    <div class="image-section">
+    <img src="${product.images[0]}" alt="${product.title}">
+    </div>
+    <!--Details section -->
+
+    <div class="item-details">
+        <h1>${product.title} </h1>
+        <div class="stars">${generateStars(product.rating)}</div>
+        <p> ${product.description} </p>
+        <div class="price">Original Price:$${product.price.toFixed(2)} </div>
+        <div class="availability">Availability: <strong> 
+        ${product.availabilityStatus} 
+        </strong> </div>
+        <div class="category">Category: <strong>${product.category} </strong>
+        </div>
+
+        <div class="details">
+        <p> <strong>Brand: </strong> ${product.brand} </p>
+        <p> <strong>SKU: </strong> ${product.sku} </p>
+        <p> <strong>Weight: </strong> ${product.weight} </p>
+        <p> <strong>Dimensions: </strong> ${product.dimensions.width} x ${product.dimensions.height} x ${product.dimensions.depth} </p>
+        <p> <strong>Minimum: </strong> ${product.minimumOrderQuantity} </p>
+        </div>
+
+        <div class="quantity">
+        <label for="Quatity">Quantity: </label>
+        <input type="number" id="quantity" value=${product.minimumOrderQuantity}>
+        </div>
+
+        <div class="total-price">Total:${product.price.toFixed(2)} </div>
+
+        <div class="actions">
+        <button class="add-to-cart">Add to cart </button>
+        </div>
+    </div>  
+</div>
+
+<div class="total-price">Total:${product.price.toFixed(2) * product.minimumOrderQuantity
+                } </div>
+
+<div class="actions">
+<button class="add-to-cart">Add to cart </button>
+</div>
+</div>
+</div>
+    
+
+    
+    `;
+            // Handle quantity input change
+            const quantityInput = document.getElementById("quantity");
+            const totalPriceElement = document.querySelector(".total-price");
+
+            // update the total price based on the quantity
+            // quantityInput.addEventListener("input", (e) => {
+            //     console.log(e);
+            //     // converting the string from the input to a number
+            //     let quantity = parseInt(e.target.value, 10);
+            //     if(isNaN(quantity)|| quantity<product.minimumOrderQuantity){
+            //         // All this must return before we execute what is in this code block
+            //         quantity = product.minimumOrderQuantity;
+            //     }
+            //     e.target.value = quantity;
+
+            //     const totalPrice = quantity * product.price;
+            //     totalPriceElement.textContent = `Total: $${totalPrice.toFixed(2)}`;
+            // });
+
+            // Function to generate starts for the rating
+            function generateStars(rating) {
+                const fullStars = Math.floor(rating);
+                const emptyStars = 5 - fullStars;
+                return "&#9733;".repeat(fullStars) + "&#9734;".repeat(emptyStars);
+            }
+
+            // fetch and display the product
+            if (productId) {
+                fetchProduct(productId);
+            } else {
+                console.error("No product Id provided in the url");
+            }
+        }
+    </script>
 </body>
 
 </html>
